fix hidden overflow for body

--- a/app/assets/stylesheets/components/_error.scss
+++ b/app/assets/stylesheets/components/_error.scss
@@ -9,7 +9,7 @@
 
 body {
     background-color: white;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .error404page {
